kubernetes/projects/home-automation/apps/home-assistant/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: home-assistant
  labels:
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/part-of: home-automation
    field.cattle.io/projectId: p-qqtgt
    kubernetes.io/metadata.name: home-assistant
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
  annotations:
    field.cattle.io/projectId: local:p-qqtgt
    helm.sh/resource-policy: keep
    meta.helm.sh/release-name: home-assistant
    meta.helm.sh/release-namespace: default
